2007-05-15  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-01-02
	* fix bug where the name of a PSet would not be loaded from the DB.

2007-05-15  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-01-01
	* bugfix for gui
	* pick up Ulf's fix for vpset conversion

2007-05-15  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-01-00
	* change schema (sql/) to accomodate global psets
	* change data model (src/confdb/data) to accomodate global psets
	* change db access (src/confdb/db/CfgDatabase.java) to accomodate
	global psets
	* change gui (src/confdb/gui/) to accomodate global psets
	* pick up Jonathan's latest changes to the parser

2007-05-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-00-12
	* various fixes, but no schema change regarding global PSets yet!
	* bugfix: PSet children were not properly loaded in 'Open'
	* change 'New Configuration' dialog such that dialog doesn't bail
	out if name and/or release are not set
	* Improve 'AddModule' context menu: all ModuleType submenus have
	now an 'All' submenu (as before) plus additional submenus for the
	starting letters of all modules
	* put tree-view in a tab ('Tree') and add tab 'Converter', where
	the converted configuration is displayed. currently ASCII. Plan:
	have three tabs: HTML/ASCII/Python.
	* don't display any tree nodes if the current configuration is
	empty

2007-05-09  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-00-11
	* add startGUI script

2007-05-04  Jonathan HOLLAR <jjhollar@cern.ch>
	* tag V00-00-10
	* Tag current version of parser.

2007-04-30  Jonathan HOLLAR <jjhollar@cern.ch>
	* tag V00-00-09
	* Collect several recent updates to parser.

2007-04-04  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-00-08
	* first integration of the converter with the GUI
	* optimizations to CfgDatabase.loadConfiguration()